# hireEVE

./: .env.example  .gitignore  CLAUDE.md  CNAME  Dockerfile.api  Dockerfile.web  README.md  biome.json  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  format.yml  publish.yml  security.yml  website.yml
apps/desktop/: chat.html  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  ChatApp.tsx  chat-entry.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ChatPanel.tsx  EveCharacter.tsx  LoginPanel.tsx  TitleBar.tsx
src/cli/: index.ts
src/report/: generator.ts
